--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-
+    "deploy": "gh-pages -d build",
+    "homepage": "https://gizemayegul.github.io/todo_APP"
   },
   "eslintConfig": {
     "extends": [
