--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gizemayegul.github.io/todo_APP",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -19,6 +20,7 @@
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
+ 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -26,7 +28,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
